--- a/index.html
+++ b/index.html
@@ -1269,7 +1269,7 @@
 
             <div class="border-top text-center">
 
-             <p class="pt-4"> ® 2020-2021 - Oneinfinity . All rights reserved.</p>
+             <p class="pt-4 pb-1"> ® 2020-2021 - Oneinfinity . All rights reserved.</p>
 
             </div>
           </footer>
